--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
-.header{
+* {
+    border: solid;
+}
+
+.menu{
     display: flex;
     justify-content: space-between;
+    background-color: black;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: 400;
+    color: white;
+}
+
+.grid{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.grid img{
+    border: 2px solid black;
+    border-radius: 50px;
+}
+
+.origami{
+    border-radius: 20px;
+    background-color: white;
+
+    width: 310px
+    font-family: fantasy;
 }
